--- a/src/eskv/wwwroot/index.html
+++ b/src/eskv/wwwroot/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>kv</title>
+    <title>eskv</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="content/style.css">
